# grokreg

./: .env.example  .gitignore  Dockerfile  README.md  config.example.json  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: probe_upload.yml  register.yml  register_probe_only.yml  register_protocol.yml  register_protocol_windows.yml  register_protocol_windows_batch.yml  register_windows.yml  register_windows_batch.yml
src/grokreg/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/grokreg/browser/: __init__.py  cloak_register.py  cloak_session.py  register.py
src/grokreg/browser/turnstilePatch/: content.js  manifest.json
src/grokreg/mail/: __init__.py  tempmail.py
src/grokreg/mint/: __init__.py  auth_code.py
src/grokreg/probe/: __init__.py  build45.py  web_chat.py
src/grokreg/protocol/: local_solver.py  register.py
src/grokreg/sink/: __init__.py  grok2api.py
src/grokreg/util/: accounts.py  log.py
tests/: test_g2a_pool_mapping.py  test_probe_gate.py  test_tempmail_unit.py
turnstile-solver/: README.md  api_solver.py  patch_playwright_ff_pageerror.py  start.sh
样本/__MACOSX/: ._grok_reg-protocol_cpa
样本/__MACOSX/grok_reg-protocol_cpa/: ._README.md
样本/grok_reg-protocol_cpa/: .env.example  .gitignore  README.md  cf_mail_debug.py  config.example.json  cpa_export.py  grok_register_ttk.py  mail_credentials.example.txt  mise.toml  optimization_checks.py  pyproject.toml  register_cli.py
样本/grok_reg-protocol_cpa/cpa_xai/: __init__.py  browser_confirm.py  mint.py  oauth_device.py  probe.py
(+2 files in other folders)
