[project]
name = "grokreg"
version = "0.1.0"
description = "Grok register → Build 4.5 probe → grok2api Build pool (tempmail + GHA)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "curl_cffi>=0.7",
    "DrissionPage>=4.1",
    "psutil>=5.9",
]

[project.scripts]
grokreg = "grokreg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grokreg"]

[tool.hatch.build]
sources = ["src"]

[tool.uv]
package = true

[project.optional-dependencies]
dev = ["pytest>=8.0"]
